--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./assets/css/global.css">
 </head>
 <body>
+    <script src="./assets/js/poke-api.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 </html>
