--- a/dist-angular-blog/index.html
+++ b/dist-angular-blog/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Marchetti Blog</title>
-  <base href="/Bootcamp-Potencia-Tech-Angular-Developer-Powered-by-iFood-DIO/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="/dist-angular-blog/favicon.ico">
 <style>*{margin:0;padding:0;box-sizing:border-box;background-color:#111;color:#fff;font-family:Segoe UI,Tahoma,Geneva,Verdana,sans-serif}</style><link rel="stylesheet" href="/dist-angular-blog/styles.37f5d7777880df37.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="/dist-angular-blog/styles.37f5d7777880df37.css"></noscript></head>
