Deploy Angular Blog

--- a/dist-angular-blog/index.html
+++ b/dist-angular-blog/index.html
@@ -5,9 +5,9 @@
   <title>Marchetti Blog</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/dist-angular-blog/favicon.ico">
-<style>*{margin:0;padding:0;box-sizing:border-box;background-color:#111;color:#fff;font-family:Segoe UI,Tahoma,Geneva,Verdana,sans-serif}</style><link rel="stylesheet" href="/dist-angular-blog/styles.37f5d7777880df37.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="/dist-angular-blog/styles.37f5d7777880df37.css"></noscript></head>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<style>*{margin:0;padding:0;box-sizing:border-box;background-color:#111;color:#fff;font-family:Segoe UI,Tahoma,Geneva,Verdana,sans-serif}</style><link rel="stylesheet" href="styles.37f5d7777880df37.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.37f5d7777880df37.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="/dist-angular-blog/runtime.8a7cc11cfa11dcd2.js" type="module"></script><script src="/dist-angular-blog/polyfills.d98534e215368eea.js" type="module"></script><script src="/dist-angular-blog/main.5ee8f4e162cc011a.js" type="module"></script></body>
+<script src="runtime.8a7cc11cfa11dcd2.js" type="module"></script><script src="polyfills.d98534e215368eea.js" type="module"></script><script src="main.5ee8f4e162cc011a.js" type="module"></script></body>
 </html>
